<resources>
    <string name="app_name">CampusTalk</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱错误!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">错误的密码！</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_wait">请稍候…</string>
    <string name="dots">…</string>
    <string name="login_failed_problem_network">登录失败，请检查网络!</string>
    <string name="login">登录中…</string>
    <string name="login_failed_problem_email">账号不存在</string>
    <string name="login_failed_problem_password">密码错误!</string>
    <string name="loading">Loading</string>
    <string name="login_failed_problem_stopped">您的账号已被停用</string>
    <string name="getvalidatecode">获取验证码</string>
    <string name="resttime">请稍候(%d)</string>
    <string name="email">邮箱</string>
    <string name="getcode_fail_wrong_email">邮箱填写有误，请重试!</string>
    <string name="aviliable_email">邮箱可用</string>
    <string name="email_sent">验证码已发送到您的邮箱，请确认！</string>
    <string name="email_sent_error">验证码发送错误，请稍候重试！</string>
    <string name="reging_please_wait">注册中,请稍候..</string>
    <string name="reg_fail_unknow">注册失败!请稍候重试</string>
    <string name="reg_fail_wrong_code">错误的验证码!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">shitsdasdsadadasd</string>
    <string name="match">匹配</string>
    <string name="find">时光机</string>
    <string name="follow">关注</string>
    <string name="settings">我的</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="txt_inc">www.mrsgx.cn © Copyright</string>
    <string name="autologin">自动登录</string>
    <string name="man">男生</string>
    <string name="female">女生</string>
    <string name="tips_email">请输入电子邮件地址</string>
    <string name="tips_password">请输入密码</string>
    <string name="tips_confirm_password">请确认密码</string>
    <string name="school">学校</string>
    <string name="tips_agreement">同意用户协议</string>
    <string name="tips_matching">匹配中…</string>
    <string name="longclick_speak">长按说话</string>
    <string name="please_input">请输入要发送的内容</string>
    <string name="realse_to_send">松开发送语音…</string>
    <string name="rest_audio_time">录音时间(%d)</string>
    <string name="btn_send">发送</string>
    <string name="btn_exit">退出登录</string>
    <string name="txt_about">关 于</string>
    <string name="txt_settings">系统设置</string>
    <string name="txt_changepass">修改密码</string>
    <string name="txt_changeprofile">修改资料</string>
    <string name="txt_start_matching">开始匹配</string>
    <string name="txt_matching">提示:点击开始匹配即可匹配当前在线校友</string>
    <string name="follow_list">Follow List ☰</string>
    <string name="time_machine">Time Machine ✈</string>
    <string name="find_introduction">时光机带您找到有一面之缘的校友</string>
    <string name="date">日期设定：</string>
    <string name="begain_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="select_date">请选择日期(过去一周内)</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="tips">提示</string>
    <string name="error">错误</string>
    <string name="notify">通知</string>
    <string name="warning">警告</string>
    <string name="email_is_null">邮箱不能为空^.^</string>
    <string name="pass_is_null">密码不能为空哦</string>
    <string name="wrong_email">邮箱格式不正确，请修改后重试</string>
    <string name="error_reged_email">此邮箱已被注册哦~</string>
    <string name="error_check_email">邮箱校验失败,请检查网络</string>
    <string name="warning_different_password">两次密码输入不一致</string>
    <string name="error_invalid_school">请选择正确的学校</string>
    <string name="error_invalid_agreement">请勾选用户使用协议</string>
    <string name="error_invalid_code">请填写验证码</string>
    <string name="fail_load_resources">资源加载失败..请重启后重试..</string>
    <string name="tips_userinfo_validate">正在进行个人信息校验…</string>
    <string name="title_complete_profile">修改资料</string>
    <string name="upload_data">正在上传数据，请稍候…</string>
    <string name="nulls">null</string>
    <string name="nickname">昵称</string>
    <string name="tips_please_input_nickname">请输入昵称</string>
    <string name="tips_please_input_gae">请输入年龄</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="tips_please_input_userexplain">请输入个人简介</string>
    <string name="userexplain">个人简介</string>
    <string name="stucard">学生卡</string>
    <string name="upload_fail">信息上传出现错误</string>
    <string name="upload_success">资料上传成功</string>
    <string name="stop_matching_failed">结束匹配失败,请稍候重试!</string>
    <string name="start_match_failed">未能成功开始匹配，请重试</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="tips_quit_or_not">是否退出聊天?</string>
    <string name="tips_rematch">对方断开了连接，正在重新匹配</string>
    <string name="tips_reconnect_server">通讯服务器已断开，尝试自动重连中</string>
    <string name="tips_connected_server">通讯服务器已连接，开始匹配吧☺</string>
    <string name="tips_network_disconnected">网络连接已断开..</string>
    <string name="tips_signal_disconnect">与服务器链接异常，请重新开始匹配!</string>
    <string name="tips_quit_or_not_match">是否退出匹配?</string>
    <string name="follow_fail">关注失败，请稍候重试!</string>
    <string name="unfollow_fail">取消关注失败,请稍候重试..</string>
    <string name="too_lazy_guy">这家伙太懒了，什么都没填..</string>
    <string name="gift_ranking">礼物天梯榜</string>
    <string name="btn_sign">签到</string>
    <string name="quit">退出</string>
    <string name="tips_show_navi">是否显示导航栏</string>
    <string name="tips_network_state">通讯服务器状态:</string>
    <string name="start_find">开始寻找</string>
    <string name="zero">0</string>
    <string name="login_failed_unknow">登录状态异常，请您重新登录</string>
    <string name="lower_version">版本过低</string>
    <string name="waiting_for_auth">您当前账户待核验，请您随时关注账户状态。</string>
    <string name="unregister_stucard">您尚未进行学生认证，点击确定完善资料,取消则退出应用</string>
    <string name="personal_center">个人中心 ☺</string>
    <string name="empty_follow_list">您的关注列表为空,快去匹配吧</string>
    <string name="tips_logout">注销登录请点击确定！</string>
    <string name="tips_lower_system_version">您的系统版本较低，请手动配置权限</string>
</resources>
