<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/find_fragment_shape"
    tools:context="com.mrsgx.campustalk.mvp.main.FindFragment"
    tools:ignore="RtlSymmetry">

    <!-- TODO: Update blank fragmpeople_list_layoutyout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/find_bar"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10">

            <TextView
                android:id="@+id/fint_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_10"
                android:text="@string/time_machine"
                android:textColor="@android:color/white"
                android:textSize="@dimen/middle_txt" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_6"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6"
            android:paddingTop="@dimen/dp_6">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/find_introduction"
                android:textAlignment="center"
                android:textColor="@color/chat_actionbar" />

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:text="@string/date"
                    android:textAlignment="gravity"
                    android:textColor="@color/chat_actionbar" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/ed_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@null"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_date"
                    android:inputType="date"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingTop="@dimen/dp_6"
                    android:textSize="@dimen/middle_txt"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:text="@string/begain_time"
                    android:textAlignment="gravity"
                    android:textColor="@color/chat_actionbar" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/ed_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@null"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_start_time"
                    android:inputType="none"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingTop="@dimen/dp_6"
                    android:textSize="@dimen/middle_txt"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:text="@string/end_time"
                    android:textAlignment="gravity"
                    android:textColor="@color/chat_actionbar" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <EditText
                    android:id="@+id/ed_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@null"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_end_time"
                    android:inputType="none"
                    android:paddingBottom="@dimen/dp_6"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingTop="@dimen/dp_6"
                    android:textSize="@dimen/middle_txt" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_common_style"
                android:text="@string/start_find"
                android:clickable="false"
                android:enabled="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/middle_txt" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
