<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mrsgx.campustalk.mvp.login.LoginActivity">

    <LinearLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646">

        <!-- <TextView
            android:id="@+id/txt_apptitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_distance"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/TitleSize" />-->

        <com.hanks.htextview.scale.ScaleTextView
            android:id="@+id/anim_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_distance"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/TitleSize" />

        <LinearLayout
            android:id="@+id/login_sub_box"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/small_pic"
                    android:layout_height="@dimen/small_pic"
                    android:layout_gravity="center"
                    android:src="@mipmap/usr" />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="@dimen/edit_width"
                    android:layout_height="@dimen/edit_height"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/small_pic"
                    android:layout_height="@dimen/small_pic"
                    android:layout_gravity="center"
                    android:src="@mipmap/pass" />

                <EditText
                    android:id="@+id/ed_pass"
                    android:layout_width="@dimen/edit_width"
                    android:layout_height="@dimen/edit_height"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/ed_email"
                    app:layout_constraintTop_toBottomOf="@+id/ed_email" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/btn_text_size"
                android:background="@drawable/btn_common_style"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_distance">

                <CheckBox
                    android:id="@+id/cb_autologin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center|center_horizontal"
                    android:checked="true"
                    android:theme="@style/CTMainTheme"
                    android:text="@string/autologin" />

                <TextView
                    android:id="@+id/btn_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginEnd="@dimen/small_distance"
                    android:layout_marginRight="@dimen/small_distance"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                   android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/btn_text_size"
                    tools:ignore="RtlHardcoded,UnknownId" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_Inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/double_distance"
            android:text="@string/txt_inc"
            android:textSize="@dimen/small_txt"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>
