<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mrsgx.campustalk.mvp.Main.MainActivity">

    <com.mrsgx.campustalk.widget.ColorAnimationView
        android:id="@+id/colorAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/small_distance"
        android:paddingTop="@dimen/small_distance"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="match_parent"
        tools:ignore="RtlSymmetry"
        android:paddingStart="10dp">
    </android.support.v4.view.ViewPager>

    <FrameLayout
        android:id="@+id/frg_navibar"
        android:layout_width="@dimen/navibar_width"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/hide_navibar_width"
        android:layout_marginStart="@dimen/hide_navibar_width"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <RadioGroup
                    android:id="@+id/radio_navi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_match"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:button="@null"
                        android:drawablePadding="-8dp"
                        android:drawableTop="@drawable/leak_canary_icon"
                        android:text="@string/match"
                        android:textAlignment="center"
                        android:textSize="@dimen/contentSize" />

                    <RadioButton
                        android:id="@+id/radio_find"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:button="@null"
                        android:drawablePadding="-8dp"
                        android:drawableTop="@drawable/leak_canary_icon"
                        android:text="@string/find"
                        android:textAlignment="center"
                        android:textSize="@dimen/contentSize" />

                    <RadioButton
                        android:id="@+id/radio_follow"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:button="@null"
                        android:drawablePadding="-8dp"
                        android:drawableTop="@drawable/leak_canary_icon"
                        android:text="@string/follow"
                        android:textAlignment="center"
                        android:textSize="@dimen/contentSize" />

                    <RadioButton
                        android:id="@+id/radio_setting"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:button="@null"
                        android:drawablePadding="-8dp"
                        android:drawableTop="@drawable/leak_canary_icon"
                        android:text="@string/settings"
                        android:textAlignment="center"
                        android:textSize="@dimen/contentSize" />
                </RadioGroup>


            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7">

                <ImageButton
                    android:id="@+id/btn_img_navi_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_media_play" />

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
